tests/baselines/reference/scopeTests.errors.txt
tests/cases/compiler/scopeTests.ts(2,7): error TS2415: Class 'D' incorrectly extends base class 'C'.
  Property 'v' is private in type 'C' but not in type 'D'.
tests/cases/compiler/scopeTests.ts(4,10): error TS2610: Property 'p' will overwrite the base property in 'C'. Add a 'declare' modifier or an initializer to avoid this.


==== tests/cases/compiler/scopeTests.ts (2 errors) ====
    class C { private v; public p; static s; }
    class D extends C {
          ~
!!! error TS2415: Class 'D' incorrectly extends base class 'C'.
!!! error TS2415:   Property 'v' is private in type 'C' but not in type 'D'.
      public v: number;
      public p: number
             ~
!!! error TS2610: Property 'p' will overwrite the base property in 'C'. Add a 'declare' modifier or an initializer to avoid this.
      constructor() {
       super()
       this.v = 1;
       this.p = 1;
       C.s = 1;
      }
    }